# file-nest

./: .env.example  .gitignore  CLAUDE.md  README.md  betterauth-llm.txt  docker-compose.yml  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/auth/: __init__.py  dependencies.py  ip_allowlist.py  models.py  signed_url_policy.py
backend/app/core/: config.py  cors_middleware.py  crypto.py  database.py  logging.py  messaging.py  nats.py
backend/app/di/: __init__.py  container.py  core.py
backend/app/errors/: __init__.py  base.py  handlers.py
backend/app/models/: __init__.py  file.py  file_version.py  folder.py  metadata_schema.py  project.py  project_config.py  storage_config.py  storage_migration.py  upload_session.py  upload_token.py  webhook.py
backend/app/processing/: __init__.py  pipeline.py
backend/app/repositories/: dashboard.py  file.py  file_version.py  folder.py  metadata_schema.py  project.py  project_config.py  storage_config.py  upload_session.py  upload_token.py  usage.py  webhook.py
backend/app/routers/: __init__.py  dashboard.py  files.py  folders.py  health.py  metadata.py  project_config.py  projects.py  storage.py  upload_tokens.py  usage.py  webhooks.py
backend/app/schemas/: dashboard.py  file.py  folder.py  metadata.py  project.py  project_config.py  storage_config.py  upload_token.py  usage.py  webhook.py
backend/app/services/: dashboard.py  file.py  folder.py  metadata.py  multipart.py  project.py  project_config.py  storage_config.py  upload_token.py  upload_validation.py  usage.py  webhook.py
backend/app/storage/: __init__.py  azure.py  gcs.py  s3.py  (+2 more)
backend/migrations/: env.py
backend/scripts/: seed_dev.py
backend/tests/: conftest.py  test_auth.py  test_project_service.py  test_projects.py
sdks/python/: pyproject.toml
shared/: pyproject.toml
shared/auth/: __init__.py  middleware.py  permissions.py  tenant.py  token.py
shared/cache/: __init__.py
shared/config/: __init__.py  settings.py
shared/database/: __init__.py  session.py
shared/docs/: auth.md  cache.md  config.md  database.md  exceptions.md  logging.md  messaging.md  overview.md
shared/exceptions/: __init__.py  base.py
shared/logging/: __init__.py
shared/messaging/: __init__.py  outbox.py
shared/models/: __init__.py  api_key.py  project.py
(+850 files in other folders)
